UserRoleController dan jwt role code
